--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Facebook</title>
+    <title>Login / Twitter Login</title>
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
+<div class="twitter-background">
+    <div class="left-side-cover">
+        <img src="assets/login.png" alt="twitter-image" id="bird-background">
+    </div>
+    <div class="right-side-cover">
+        <img src="assets/twitter.webp" alt="logo" id="logo">
+        <h1 id="happening">Happening now</h1>
+        <h3 id="join">Join Twitter today.</h3>
+        <div class="google-cover">
+            <img src="assets/google.webp" alt="google" id="google-logo">
+            <p>Sign up with Google</p>
+        </div>
+        <div class="twitter-cover">
+            <img src="assets/apple.webp" alt="apple" id="apple-logo">
+            <p>Sign up with or</p>
+        </div>
+        <p>or</p>
+        <div class="phone-number">
+            <p>Sign up with a phone number or em...</p>
+        </div>
+        <p id="sign">By signing up, you agree to the <a href="#" class="links">Terms of Service</a> and
+            <a href="#" class="links">Privacy Policy</a>, including <a href="#" class="class"></a>Cookie Use
+        </p>
 
+        <h3>Already have an account?</h3>
+
+        <div class="sign-in-cover">
+            <p id="sign-in">Sign in</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
