--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <title>Login / Twitter Login</title>
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/general.css">
 </head>
 <body>
 <div class="twitter-background">
     <div class="left-side-cover">
-        <img src="assets/login.png" alt="twitter-image" id="bird-background">
+        <img src="assets/white-twit.webp" alt="twitter-image" id="bird-background">
     </div>
     <div class="right-side-cover">
         <img src="assets/twitter.webp" alt="logo" id="logo">
         <h1 id="happening">Happening now</h1>
         <h3 id="join">Join Twitter today.</h3>
-        <div class="google-cover">
-            <img src="assets/google.webp" alt="google" id="google-logo">
-            <p>Sign up with Google</p>
-        </div>
-        <div class="twitter-cover">
-            <img src="assets/apple.webp" alt="apple" id="apple-logo">
-            <p>Sign up with or</p>
-        </div>
-        <p>or</p>
+        <div class="entire-cover">
+            <div class="google-cover">
+                <img src="assets/google.webp" alt="google" id="google-logo">
+                <p>Sign up with Google</p>
+            </div>
+            <div class="twitter-cover">
+                <img src="assets/apple.webp" alt="apple" id="apple-logo">
+                <p>Sign up with Apple</p>
+            </div>
+            <p id="or">or</p>
         <div class="phone-number">
             <p>Sign up with a phone number or em...</p>
         </div>
@@ -37,7 +39,30 @@
         <div class="sign-in-cover">
             <p id="sign-in">Sign in</p>
         </div>
+        </div>
     </div>
 </div>
+    <div class="lists-cover">
+        <ul class="lists">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help Centre</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Ads Info</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Brand Resources</a></li>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Twitter for Business</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">&copy;2022 Twitter, Inc.</a></li>
+        </ul>
+    </div>
 </body>
 </html>
