--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Already have an account?</h3>
 
             <div class="sign-in-cover">
-                <p id="sign-in">Sign in</p>
+                <a href="login.html"><p id="sign-in">Sign in</p></a>
             </div>
         </div>
     </div>
