--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div class="entire-cover">
+    <div class="x">
+        <i class="fa-solid fa-x fa-lg"></i>
+    </div>
     <div id="logo-cover">
         <img alt="logo" id="logo" src="assets/twitter.webp">
     </div>
@@ -31,7 +34,7 @@
     </div>
     <div class="info-cover">
         <label for="info">
-            <input type="text" id="info" placeholder="Phone, email address or username">
+            <input id="info" placeholder="Phone, email address or username" type="text">
         </label>
     </div>
     <div class="next-cover">
