commit signin hover

--- a/login.html
+++ b/login.html
@@ -7,45 +7,48 @@
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/login-hover.css" rel="stylesheet">
     <link href="styles/general.css" rel="stylesheet">
+    <script src="styles/app.js"></script>
 </head>
 <body>
-<div class="entire-cover">
-    <div class="x">
-        <i class="fa-solid fa-x fa-lg"></i>
+<main>
+    <div class="entire-cover">
+        <div class="x">
+            <i class="fa-solid fa-x fa-lg"></i>
+        </div>
+        <div id="logo-cover">
+            <img alt="logo" id="logo" src="assets/twitter.webp">
+        </div>
+        <div id="text-cover">
+            <h3 id="text">Sign in to Twitter</h3>
+        </div>
+        <div class="google-cover">
+            <img alt="google" id="google-logo" src="assets/google.webp">
+            <p>Continue with Google</p>
+        </div>
+        <div class="twitter-cover">
+            <img alt="apple" id="apple-logo" src="assets/apple.webp">
+            <p>Continue with Apple</p>
+        </div>
+        <div class="or-cover">
+            <hr class="line">
+            <p id="or">or</p>
+            <hr class="line">
+        </div>
+        <div class="info-cover">
+            <label for="info">
+                <input id="info" placeholder="Phone, email address or username" type="text">
+            </label>
+        </div>
+        <div class="next-cover">
+            <p>Next</p>
+        </div>
+        <div class="forgot-password">
+            <p>Forgot password?</p>
+        </div>
+        <div class="signup">
+            <p id="dont">Don't have an account? <a href="#" id="up">Sign Up</a></p>
+        </div>
     </div>
-    <div id="logo-cover">
-        <img alt="logo" id="logo" src="assets/twitter.webp">
-    </div>
-    <div id="text-cover">
-        <h3 id="text">Sign in to Twitter</h3>
-    </div>
-    <div class="google-cover">
-        <img alt="google" id="google-logo" src="assets/google.webp">
-        <p>Continue with Google</p>
-    </div>
-    <div class="twitter-cover">
-        <img alt="apple" id="apple-logo" src="assets/apple.webp">
-        <p>Continue with Apple</p>
-    </div>
-    <div class="or-cover">
-        <hr class="line">
-        <p id="or">or</p>
-        <hr class="line">
-    </div>
-    <div class="info-cover">
-        <label for="info">
-            <input id="info" placeholder="Phone, email address or username" type="text">
-        </label>
-    </div>
-    <div class="next-cover">
-        <p>Next</p>
-    </div>
-    <div class="forgot-password">
-        <p>Forgot password?</p>
-    </div>
-    <div class="signup">
-        <p id="dont">Don't have an account? <a href="#">Sign Up</a></p>
-    </div>
-</div>
+</main>
 </body>
 </html>
