--- a/index.html
+++ b/index.html
@@ -7,62 +7,67 @@
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/login.css" rel="stylesheet">
     <link href="styles/general.css" rel="stylesheet">
+    <script src="styles/app.js"></script>
 </head>
 <body>
-<div class="twitter-background">
-    <div class="left-side-cover">
-        <img alt="twitter-image" id="bird-background" src="assets/white-twit.webp">
-    </div>
-    <div class="right-side-cover">
-        <img alt="logo" id="logo" src="assets/twitter.webp">
-        <h1 id="happening">Happening now</h1>
-        <h3 id="join">Join Twitter today.</h3>
-        <div class="entire-cover">
-            <div class="google-cover">
-                <img alt="google" id="google-logo" src="assets/google.webp">
-                <p>Sign up with Google</p>
-            </div>
-            <div class="twitter-cover">
-                <img alt="apple" id="apple-logo" src="assets/apple.webp">
-                <p>Sign up with Apple</p>
-            </div>
-            <p id="or">or</p>
-            <div class="phone-number">
-                <p>Sign up with a phone number or em...</p>
-            </div>
-            <p id="sign">By signing up, you agree to the <a class="links" href="#">Terms of Service</a> and
-                <a class="links" href="#">Privacy Policy</a>, including <a class="class" href="#"></a>Cookie Use
-            </p>
+<main>
+    <div class="twitter-background">
+        <div class="left-side-cover">
+            <img alt="twitter-image" id="bird-background" src="assets/white-twit.webp">
+        </div>
+        <div class="right-side-cover">
+            <img alt="logo" id="logo" src="assets/twitter.webp">
+            <h1 id="happening">Happening now</h1>
+            <h3 id="join">Join Twitter today.</h3>
+            <div class="entire-cover">
+                <div class="google-cover">
+                    <img alt="google" id="google-logo" src="assets/google.webp">
+                    <p>Sign up with Google</p>
+                </div>
+                <div class="twitter-cover">
+                    <img alt="apple" id="apple-logo" src="assets/apple.webp">
+                    <p>Sign up with Apple</p>
+                </div>
+                <p id="or">or</p>
+                <div class="phone-number">
+                    <p>Sign up with a phone number or em...</p>
+                </div>
+                <p id="sign">By signing up, you agree to the <a class="links" href="#">Terms of Service</a> and
+                    <a class="links" href="#">Privacy Policy</a>, including <a class="class" href="#"></a>Cookie Use
+                </p>
 
-            <h3>Already have an account?</h3>
+                <h3>Already have an account?</h3>
 
-            <div class="sign-in-cover">
-                <a href="login.html"><p id="sign-in">Sign in</p></a>
+                <div class="sign-in-cover">
+                    <a href="login.html"><p id="sign-in">Sign in</p></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="lists-cover">
-    <ul class="lists">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Help Centre</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Cookie Policy</a></li>
-        <li><a href="#">Accessibility</a></li>
-        <li><a href="#">Ads Info</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Status</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Brand Resources</a></li>
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Marketing</a></li>
-        <li><a href="#">Twitter for Business</a></li>
-        <li><a href="#">Developers</a></li>
-        <li><a href="#">Directory</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">&copy;2022 Twitter, Inc.</a></li>
-    </ul>
-</div>
+    <div class="lists-cover">
+        <ul class="lists">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help Centre</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Ads Info</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Brand Resources</a></li>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Twitter for Business</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">&copy;2022 Twitter, Inc.</a></li>
+        </ul>
+    </div>
+</main>
+
+<div class="overlay"></div>
 </body>
 </html>
