--- a/index.html
+++ b/index.html
@@ -74,43 +74,45 @@
 
 <div class="overlay"></div>
 
-<div class="entire-cover-login">
-    <div class="x">
-        <i class="fa-solid fa-x fa-lg"></i>
+<section>
+    <div class="entire-cover-login">
+        <div class="x">
+            <i class="fa-solid fa-x fa-lg"></i>
+        </div>
+        <div id="logo-cover-login">
+            <img alt="logo" id="logo-twit" src="assets/twitter.webp">
+        </div>
+        <div id="text-cover-login">
+            <h3 id="text">Sign in to Twitter</h3>
+        </div>
+        <div class="google-cover-login">
+            <img alt="google" id="google-logo-g" src="assets/google.webp">
+            <p>Continue with Google</p>
+        </div>
+        <div class="twitter-cover-login">
+            <img alt="apple" id="apple-logo-g" src="assets/apple.webp">
+            <p>Continue with Apple</p>
+        </div>
+        <div class="or-cover-login">
+            <hr class="line-login">
+            <p id="or-text">or</p>
+            <hr class="line-login">
+        </div>
+        <div class="info-cover-login">
+            <label for="info-login">
+                <input id="info-login" placeholder="Phone, email address or username" type="text">
+            </label>
+        </div>
+        <div class="next-cover-login">
+            <p>Next</p>
+        </div>
+        <div class="forgot-password-login">
+            <p>Forgot password?</p>
+        </div>
+        <div class="signup-login">
+            <p id="dont">Don't have an account? <a href="#">Sign Up</a></p>
+        </div>
     </div>
-    <div id="logo-cover-login">
-        <img alt="logo" id="logo-twit" src="assets/twitter.webp">
-    </div>
-    <div id="text-cover-login">
-        <h3 id="text">Sign in to Twitter</h3>
-    </div>
-    <div class="google-cover-login">
-        <img alt="google" id="google-logo-g" src="assets/google.webp">
-        <p>Continue with Google</p>
-    </div>
-    <div class="twitter-cover-login">
-        <img alt="apple" id="apple-logo-g" src="assets/apple.webp">
-        <p>Continue with Apple</p>
-    </div>
-    <div class="or-cover-login">
-        <hr class="line-login">
-        <p id="or-text">or</p>
-        <hr class="line-login">
-    </div>
-    <div class="info-cover-login">
-        <label for="info-login">
-            <input id="info-login" placeholder="Phone, email address or username" type="text">
-        </label>
-    </div>
-    <div class="next-cover-login">
-        <p>Next</p>
-    </div>
-    <div class="forgot-password-login">
-        <p>Forgot password?</p>
-    </div>
-    <div class="signup-login">
-        <p id="dont">Don't have an account? <a href="#">Sign Up</a></p>
-    </div>
-</div>
+</section>
 </body>
 </html>
