--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/login.css" rel="stylesheet">
     <link href="styles/general.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="styles/app.js"></script>
-    <script>
-
-    </script>
 </head>
 <body>
 <main class="main">
@@ -104,7 +100,7 @@
             </label>
         </div>
         <div class="next-cover-login">
-            <p>Next</p>
+            <p><a href="main.html">Next</a></p>
         </div>
         <div class="forgot-password-login">
             <p>Forgot password?</p>
