--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/login.css" rel="stylesheet">
     <link href="styles/general.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/queries.css">
     <script defer src="styles/app.js"></script>
 </head>
 <body>
