--- a/main.html
+++ b/main.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="styles/general.css">
 </head>
 <body>
-
+<div class="left-side-cover">
+    <div class="object">
+        <img src="assets/twitter.webp" alt="logo" class="twitter-logo">
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-house-chimney-window"></i>
+        <p class="word">Home</p>
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-hashtag"></i>
+        <p class="word">Explore</p>
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-bell"></i>
+        <p class="word">Notifications</p>
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-envelope"></i>
+        <p class="word">Envelope</p>
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-bookmark"></i>
+        <p class="word">Bookmarks</p>
+    </div>
+    <div class="object">
+        <i class="fa-regular fa-rectangle-list"></i>
+        <p class="word">Lists</p>
+    </div>
+    <div class="object">
+        <i class="fa-solid fa-user"></i>
+        <p class="word">Profile</p>
+    </div>
+</div>
 </body>
 </html>
