--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Login / Twitter Login</title>
+    <title>Login / Twitter Login / Twitter</title>
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/login.css" rel="stylesheet">
     <link href="styles/general.css" rel="stylesheet">
