--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
             <hr class="line-login">
         </div>
         <div class="info-cover-login">
-            <label for="info-login">
-                <input id="info-login" placeholder="Phone, email address or username" type="text">
-            </label>
+            <form>
+                <label for="info-login">
+                    <input id="info-login" placeholder="Phone, email address or username" type="text">
+                </label>
+            </form>
         </div>
         <div class="next-cover-login">
             <p><a href="main.html">Next</a></p>
