--- a/main.html
+++ b/main.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Login / Twitter Login</title>
+    <title>Home / Twitter</title>
     <link href="styles/fontawesome-free-6.1.1-web/css/all.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/general.css">
 </head>
 <body>
 <div class="left-side-cover">
     <div class="object">
-        <img src="assets/twitter.webp" alt="logo" class="twitter-logo">
+        <img alt="logo" class="twitter-logo" src="assets/twitter.webp">
     </div>
     <div class="object">
         <i class="fa-solid fa-house-chimney-window"></i>
@@ -34,7 +33,7 @@
         <p class="word">Bookmarks</p>
     </div>
     <div class="object">
-        <i class="fa-regular fa-rectangle-list"></i>
+        <i class="fa-solid fa-rectangle-list"></i>
         <p class="word">Lists</p>
     </div>
     <div class="object">
